# LiteEngine

./: CMakeLists.txt  CompileShaders.sh  StripDebugInfo.sh
Shaders/: TriangleShader.vert
Shaders/Compiled/: TriangleShader.frag.spv  TriangleShader.vert.spv
Shaders/Source/: TriangleShader.frag  TriangleShader.vert
Source/: .editorconfig
Source/CoreFiles/: Array.hpp  Assert.cpp  Assert.hpp  Atomic.hpp  ChooseExecutableMain.cpp  ChooseMain.cpp  Color.cpp  Color.hpp  Definitions.hpp  Delegate.hpp  EngineGlobals.cpp  EngineGlobals.hpp  EngineSettings.hpp  FakeMain.cpp  Function.hpp  Future.cpp  Future.hpp  GuardedMain.cpp  Iterator.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  Memory.cpp  Memory.hpp  Optional.hpp  Quaternion.cpp  Quaternion.hpp  Simd.cpp  Simd.hpp  SmartPointer.cpp  SmartPointer.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Tuple.hpp  TypeTraits.cpp  TypeTraits.hpp  Vector.cpp  (+2 more)
Source/CoreFiles/Actor/: Actor.hpp  Robot.cpp  Robot.hpp
Source/CoreFiles/Actor/BuildComponent/: BuildComponent.cpp  BuildComponent.hpp  MovementComponent.hpp  WeaponComponent.hpp
Source/CoreFiles/Interface/: Damageable.cpp  Damageable.hpp  IniConfig.cpp  IniConfig.hpp  Tick.cpp  Tick.hpp
Source/CoreFiles/Object/: Allocator.cpp  Allocator.hpp  Level.hpp  Object.hpp  World.hpp
Source/CoreFiles/Thread/: Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp
Source/Format/: ChangeLog.rst  README.rst
Source/Format/doc/: api.rst
Source/Rendering/: RenderDebug.cpp  RenderDebug.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderInstance.cpp  RenderInstance.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderSettings.cpp  RenderSettings.hpp  RenderSwapChain.cpp  RenderSwapChain.hpp  RenderWindow.cpp  RenderWindow.hpp  Vertex.cpp  Vertex.hpp  VulkanCommon.cpp  VulkanCommon.hpp  VulkanLibrary.cpp  VulkanLibrary.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Source/Rendering/glfw-3.3.3/docs/: Doxyfile.in  compile.dox  intro.dox  news.dox  window.dox
Source/Rendering/glfw-3.3.3/tests/: timeout.c
